Mon Feb 28 16:48:42 2011  Tanaka Akira  <akr@fsij.org>

	* ext/openssl/ossl_pkcs12.c: parenthesize macro arguments.

Mon Feb 28 16:28:15 2011  NARUSE, Yui  <naruse@ruby-lang.org>

	* string.c (tr_trans): when the hash for multibyte repl is empty,
	  tr is inverse mode, and a character doesn't much the table, the
	  character should be replaced by last replacement. Bug #4449

Mon Feb 28 16:38:56 2011  Tanaka Akira  <akr@fsij.org>

	* ext/openssl/ossl_ocsp.c: parenthesize macro arguments.

Mon Feb 28 13:02:15 2011  Danial Pearce <github@tigris.id.au>

	* lib/tempfile.rb: Fix example file paths in docs for tempfile.
	  https://github.com/ruby/ruby/pull/5

Mon Feb 28 12:56:18 2011  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* ext/openssl/ossl_cipher.c (ossl_cipher_init): typo fix.
	  https://github.com/ruby/ruby/pull/8

Mon Feb 28 12:28:13 2011  NAKAMURA Usaku  <usa@ruby-lang.org>

	* ext/date/date_core.c (datetime_s_now): localtime() and localtime_r()
	  required time_t pointer as 1st parameter, and tv_sec member of struct
	  timeval is long.

Mon Feb 28 11:57:40 2011  Shota Fukumori  <sorah@tubusu.net>

	* test/testunit/test_parallel.rb: Temporally disable test on Windows.

Mon Feb 28 07:28:35 2011  Shota Fukumori  <sorah@tubusu.net>

	* lib/test/unit.rb(Test::Unit::Runner#after_worker_quit):
	  method name more be natural English.

	* lib/test/unit.rb(Test::Unit::Runner::Worker.launch):
	  IO.sync doesn't need. Should use "b" for mode.

Sun Feb 27 21:59:37 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* test/ruby/test_system.rb (TestSystem#test_system_redirect_win):
	  add test for system().

Sun Feb 27 18:00:09 2011  Shota Fukumori  <sorah@tubusu.net>

	* lib/test/unit.rb: Refactoring; Worker never use Hash for internal
	storage.

	* lib/test/unit.rb: Never use Kernel#spawn. Use IO.popen instead.

Sun Feb 27 13:16:48 2011  Tanaka Akira  <akr@fsij.org>

	* ext/openssl/ossl_ns_spki.c: parenthesize macro arguments.
