@@ -1,3 +1,7 @@
+Mon Feb 28 17:36:57 2011  Tanaka Akira  <akr@fsij.org>
+
+	* ext/openssl/ossl_pkcs7.c: parenthesize macro arguments.
+
 Mon Feb 28 16:48:42 2011  Tanaka Akira  <akr@fsij.org>
 
 	* ext/openssl/ossl_pkcs12.c: parenthesize macro arguments.
